bad/bin_op_ge_void_array.example_compiler_output
ERROR
[1mbad/bin_op_ge_void_array.lat:4:8: [1;31merror: [0;1moperator >= is defined only for int values and string values, not `void` and `int[]`[m
	foo() >= new int[3];
	      [1;32m^[m
